fix misaligned timestamp text

--- a/app/src/app/components/stix/timestamp-property/timestamp-view/timestamp-view.component.scss
+++ b/app/src/app/components/stix/timestamp-property/timestamp-view/timestamp-view.component.scss
@@ -2,7 +2,7 @@
     display: inline-block;
     white-space: nowrap;
     
-    span {
-        vertical-align: middle;
-    }
+    // span {
+    //     vertical-align: middle;
+    // }
 }
